# Nova

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build_nova.bat
assets/: texture.glsl
engine/: CMakeLists.txt  Log.cpp  Log.h  Nova.h  imgui.ini  test.cpp  test.h
engine/Cores/: Application.cpp  Application.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Window.h
engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
engine/Platform/: Window.h  glad.c
engine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
engine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
engine/Platform/include/glad/: glad.h
engine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  texture.cpp  texture.h
game/: Application.cpp  EntryPoint.cpp
